<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="12dp"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvSymbol"
        android:text="@string/AAPL"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvQty"   android:text="@string/qty"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvAvg"   android:text="@string/avg"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvPrice" android:text="@string/price"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvValue" android:text="@string/value"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvPnL"   android:text="@string/p_l"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</LinearLayout>
