<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/pick_user"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUsername"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnConfirm"
        android:text="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
