<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp" />

    <Button
        android:id="@+id/btnGoToMarket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browse"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnGoToPortfolio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_portfolio" />

</LinearLayout>
